--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
