--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <connectionStrings>
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GADATAConnectionString"
-            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUi;Password=EqUi"
+            connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
             providerName="System.Data.SqlClient" />
         <add name="ExcelAddInEquipmentDatabase.Properties.Settings.GadataConnRW"
             connectionString="Data Source=sqla001.gen.volvocars.net;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" />
