--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -13,6 +13,10 @@
   <package id="log4net" version="2.0.8" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
@@ -22,6 +26,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Moment.js" version="2.20.1" targetFramework="net46" />
