--- a/WebNavigator_Gadget_Watcher/App.config
+++ b/WebNavigator_Gadget_Watcher/App.config
@@ -35,6 +35,12 @@
             <setting name="htmlExportPath" serializeAs="String">
                 <value>http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/</value>
             </setting>
+            <setting name="InetCachePath" serializeAs="String">
+                <value>c:\Windows\SysWOW64\config\systemprofile\AppData\Local\Microsoft\Windows\INetCache\IE</value>
+            </setting>
+            <setting name="InetCachePathEnbl" serializeAs="String">
+                <value>True</value>
+            </setting>
         </WebNavigator_Gadget_Watcher.Properties.Settings>
     </userSettings>
 
