--- a/EQUICommunictionLib/EQUICommunictionLib.csproj
+++ b/EQUICommunictionLib/EQUICommunictionLib.csproj
@@ -59,6 +59,7 @@
     <Compile Include="GadataComm.cs" />
     <Compile Include="MaximoComm.cs" />
     <Compile Include="mx7Sync.cs" />
+    <Compile Include="NetworkCredentials.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sharepoint.cs" />
     <Compile Include="StoComm.cs" />
