--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -164,9 +164,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Alert\AlertAreaRegistration.cs" />
+    <Compile Include="Areas\Alert\AlertEngine.cs" />
     <Compile Include="Areas\Alert\Controllers\HomeController.cs" />
     <Compile Include="Areas\Alert\Controllers\SmsController.cs" />
-    <Compile Include="Areas\Alert\Controllers\triggersController.cs" />
     <Compile Include="Areas\Alert\Models\AlertModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -652,6 +652,12 @@
     <Content Include="Content\font\summernote.woff" />
     <Content Include="Areas\Alert\Views\web.config" />
     <Content Include="Areas\Alert\Views\Sms\SendSMS.cshtml" />
+    <Content Include="Areas\Alert\Views\triggers\Create.cshtml" />
+    <Content Include="Areas\Alert\Views\triggers\Delete.cshtml" />
+    <Content Include="Areas\Alert\Views\triggers\Details.cshtml" />
+    <Content Include="Areas\Alert\Views\triggers\Edit.cshtml" />
+    <Content Include="Areas\Alert\Views\triggers\Index.cshtml" />
+    <Content Include="Areas\Alert\Views\Home\Index.cshtml" />
     <EntityDeploy Include="Areas\Alert\Models\AlertModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>AlertModel.Designer.cs</LastGenOutput>
@@ -659,12 +665,7 @@
     <Content Include="Areas\Alert\Models\AlertModel.edmx.diagram">
       <DependentUpon>AlertModel.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Alert\Views\triggers\Create.cshtml" />
-    <Content Include="Areas\Alert\Views\triggers\Delete.cshtml" />
-    <Content Include="Areas\Alert\Views\triggers\Details.cshtml" />
-    <Content Include="Areas\Alert\Views\triggers\Edit.cshtml" />
-    <Content Include="Areas\Alert\Views\triggers\Index.cshtml" />
-    <Content Include="Areas\Alert\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Alert\Views\Home\ConfigHangfire.cshtml" />
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="MvcGrid\fonts\glyphicons-halflings-regular.svg" />
